# Forklift_FSM

./: README.md  tang nano pinout final.html
FORKLIFT/: FORKLIFT.gprj
FORKLIFT/impl/gwsynthesis/: FORKLIFT.prj  FORKLIFT.vg  FORKLIFT_syn.rpt.html  FORKLIFT_syn_resource.html  FORKLIFT_syn_rsc.xml
FORKLIFT/impl/pnr/: FORKLIFT.binx  FORKLIFT.db  FORKLIFT.pin.html  FORKLIFT.power.html  FORKLIFT.rpt.html  FORKLIFT.rpt.txt  FORKLIFT.timing_paths  FORKLIFT.tr.html  FORKLIFT_tr_cata.html  FORKLIFT_tr_content.html  cmd.do
FORKLIFT/impl/temp/: rtl_parser.result  rtl_parser_arg.json
FORKLIFT/src/: forklift_top.cst  forklift_top.v
forklift/: PROJECT_GUIDE.md  forklift.gprj  forklift_spi.py  forklift_top.cst  forklift_top.v  pid_controller.v  pwm_gen.v  quad_decoder.v  soft_limits.v  spi_slave.v  uart_tx.v
forklift/impl/: forklift_process_config.json
forklift/impl/gwsynthesis/: forklift.prj  forklift.vg  forklift_syn.rpt.html  forklift_syn_resource.html  forklift_syn_rsc.xml
forklift/impl/pnr/: cmd.do  forklift.binx  forklift.db  forklift.pin.html  forklift.power.html  forklift.rpt.html  forklift.rpt.txt  forklift.timing_paths  forklift.tr.html  forklift_tr_cata.html  forklift_tr_content.html
forklift/impl/temp/: rtl_parser.result  rtl_parser_arg.json
forklift/src/: forklift_top.cst  forklift_top.v
forklift/src/fork/: fork.gprj
forklift/src/fork/src/: forklift_top.cst  (+1 more)
forklift_ros2/: package.xml  setup.cfg  setup.py
forklift_ros2/config/: forklift_params.yaml
forklift_ros2/forklift_ros2/: forklift_driver.py
forklift_ros2/launch/: forklift.launch.py
(+18 files in other folders)
